# Jurbas-Code

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PROJECT.md  README.md  _analyze_git.py  _extract_git_objects.py  audit.jsonl  history.json  main.py  providers.py  pyproject.toml  test_error_handling.py  test_main.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture-after.mmd  architecture-before.mmd  architecture.md  architecture.mmd  cli_usage.md  development.md  providers.md
docs/plans/: rag-code-indexing-architecture.md
jurbas/: __init__.py  adapters.py  agent.py  config.py  git_utils.py  prompts.py  providers.py  security.py  tools.py
jurbas_code/: __init__.py  agent.py  audit.py  commands.py  config.py  log_config.py  main.py  prompts.py  providers.py  security.py  skills.py  telegram_adapter.py  tool_schemas.py  tools.py
jurbas_code/providers/: __init__.py  antigravity.py
jurbas_code/tui/: app.py  chat_view.py  input_bar.py  status_bar.py
tests/: conftest.py  test_adapters.py  test_agent.py  test_antigravity.py  test_architecture.py  test_audit.py  test_claude_code_headers.py  test_codex.py  test_commands.py  test_config.py  test_encoding_fix.py  test_error_handling.py  test_history.py  test_log_config.py  test_main.py  test_model_resolver.py  test_package_structure.py  test_providers.py  test_run_bash.py  test_shell_health.py  test_skills.py  test_slash_model.py  test_telegram_adapter.py  test_tools.py  test_tui.py  test_tui_confirmation.py
