[project]
name = "jurbas-code"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92.0",
    "openai>=2.42.0",
    "python-dotenv>=1.0.0",
    "ddgs>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
