[project]
name = "jurbas-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
env-file = ".env"
dependencies = [
    "anthropic>=0.92.0",
    "openai>=2.42.0",
    "python-dotenv>=1.0.0",
    "ddgs>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]
tui = [
    "textual>=0.50.0",
    "rich>=13.0.0",
]
