[project]
name = "jurbas-code"
version = "0.1.0"
description = "An AI terminal agent with streaming support and multiple LLM providers."
readme = "README.md"
requires-python = ">=3.14"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jurbas Contributors"},
]
keywords = ["ai", "agent", "terminal", "claude", "deepseek"]
classifiers = [
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
env-file = ".env"
dependencies = [
    "anthropic>=0.92.0",
    "openai>=2.42.0",
    "python-dotenv>=1.0.0",
    "ddgs>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
jurbas = "main:main"
